# meeting-room-booking

./: .gitignore  Dockerfile  README.md  docker-compose.yml  markdown.md  pyproject.toml  requirements.txt  untitled2.py
app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
app/routers/: auth_router.py  bookings_router.py  rooms_router.py
tests/: conftest.py  test_auth.py  test_bookings.py  test_rooms.py
