[tool.poetry]
name = "meeting-room-booking"
version = "0.1.0"
description = "Сервис бронирования переговорных комнат"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "2.0.35"}
asyncpg = "0.30.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
bcrypt = "4.1.3"
pydantic = "2.9.0"
pydantic-settings = "2.5.0"
python-multipart = "0.0.9"

[tool.poetry.group.test.dependencies]
pytest = "8.3.2"
pytest-asyncio = "0.24.0"
httpx = "0.27.0"
aiosqlite = "0.20.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"